# livepeer-python-gateway

./: .gitignore  README  pyproject.toml
examples/: byoc_single_shot.py  byoc_streaming.py  camera_capture.py  capability_discovery_service.py  get_orchestrator_info.py  in_out_composite.py  payments.py  record_trickle_stream.py  run_session.py  select_orchestrator.py  start_job.py  start_stream.py  stream_video_file.py  subscribe_events.py  subscribe_frames.py  write_control.py  write_frames.py
src/livepeer_gateway/: __init__.py  byoc.py  capabilities.py  codegen.py  control.py  errors.py  events.py  live_payment.py  lp_rpc_pb2.py  lp_rpc_pb2_grpc.py  lv2v.py  media_decode.py  media_output.py  media_publish.py  media_subscribe.py  orch_info.py  orchestrator.py  orchestrator_session.py  payments.py  remote_signer.py  segment_reader.py  trickle_publisher.py  trickle_subscriber.py
src/livepeer_gateway/net/: lp_rpc_pb2.py  lp_rpc_pb2_grpc.py
tests/: test_session_refresh.py
